--- a/style.css
+++ b/style.css
@@ -21,10 +21,7 @@ h1, h2 {
     text-align: center;
 }
 /* Specific styles for the image container */
-td.image-container  {
-    width: 100%;
-    /* height: 200px; */
-}
+
 
 /* Responsive styles for smaller screens */
 @media (max-width: 600px) {
@@ -40,6 +37,6 @@ td.image-container  {
 }
 
 .hover-image:hover {
-    cursor: url('images/profile_hover.jpg'), auto; /* image on hover */
+    content: url('images/profile_hover.png'); /* image on hover */
 }
 /* Additional styling as needed */
