--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ table {
 
 td {
     vertical-align: middle;
-    padding: 2.5%;
+    padding: 1.5%;
 }
 
 h1, h2 {
@@ -28,6 +28,7 @@ h1, h2 {
     td.image-container   {
         width: 50px;
         /* height: 100px; */
+        padding:20px
     }
 }
 .hover-image {
