--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     text-align: left;
-    font-size: 12.5px;
+    /* font-size: 12.5px; */
 }
 
 table {
@@ -16,7 +16,7 @@ table {
 td {
     vertical-align: middle;
     padding: 1.5%;
-    font-size: 11.5px;
+    font-size: 11px;
 }
 
 h1, h2 {
