--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ table {
 td {
     vertical-align: middle;
     padding: 1.5%;
-    font-size: 12.5px;
+    /* font-size: 12.5px; */
 }
 
 h1, h2 {
